# simple-server

./: .clang-format  .gitmodules  CMakeLists.txt
http/: message.c  message.h  request.c  request.h  response.c  response.h
test/: CMakeLists.txt
test/http/: message_test.c  request_test.c  response_test.c
test/utils/: list_test.c
utils/: list.c  list.h  utils.h
